--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
             const path = location.pathname;
             console.log(path)
             // Redirect to the homepage and append the path
-            window.location.href = '/index.html';
+            window.location.href = path;
         });
     </script>
 </body>
