--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <script>
         // JavaScript to handle the redirect
         localStorage.setItem('NOT_FOUND_PATH', window.location.pathname);
-        window.location.replace('/index.html')
+        window.location.replace('/')
     </script>
 </body>
 </html>
